# east-text-detection-demo

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  demo.py  east_demo.py  pyproject.toml  requirements.txt  requirements_win.txt  setup.cfg  web_app.py
.github/workflows/: ci.yaml
hooks/: pre-commit
tests/: test_text_bounding.py
